Removed commons-io dependency